     10 Gbps link speed by default in case the actual link speed cannot be
     determined.  Previously it was 10 Mbps.  Values can still be overridden
     by specifying 'max-rate' or '[r]stp-path-cost' accordingly.
   - OpenFlow:
     * New OpenFlow extension NXT_CT_FLUSH to flush connections matching
       the specified fields.
   - ovs-ctl:
     * New option '--dump-hugepages' to include hugepages in core dumps. This
       can assist with postmortem analysis involving DPDK, but may also produce
       significantly larger core dump files.
   - ovs-dpctl and 'ovs-appctl dpctl/' commands:
     * 'flush-conntrack' is now capable of handling partial 5-tuple,
        with additional optional parameter to specify the reply direction.
   - ovs-ofctl:
     * New command 'flush-conntrack' that accepts zone and 5-tuple (or partial
       5-tuple) for both directions.
   - Support for travis-ci.org based continuous integration builds has been
     dropped.
   - Userspace datapath:
     * Add '-secs' argument to appctl 'dpif-netdev/pmd-rxq-show' to show
       the pmd usage of an Rx queue over a configurable time period.
     * Add new experimental PMD load based sleeping feature. PMD threads can
       request to sleep up to a user configured 'pmd-maxsleep' value under
       low load conditions.


v3.0.0 - 15 Aug 2022
--------------------
   - libopenvswitch API change:
     * To fix the Undefined Behavior issue causing the compiler to incorrectly
       optimize important parts of code, container iteration macros (e.g.,
       LIST_FOR_EACH) have been re-implemented in a UB-safe way.
     * Backwards compatibility has mostly been preserved, however the
       user-provided pointer is now set to NULL after the loop (unless it
       exited via "break;")
     * Users of libopenvswitch will need to double-check the use of such loop
       macros before compiling with a new version.
     * Since the change is limited to the definitions within the headers, the